tests/binding/pass/global_var.crs
var a : i32 = 2;

fn test() i32 {
    return a;
}