tests/binding/fail/local_var_different_order.crs
fn test() {
    a;

    var a : i32 = 2;
}